...
      {/* Menu */}
      <View className="px-4 pt-2">
        <ThemeToggle />
        <LanguageSelector />

        <SettingsMenuItem
          testID="insights-button"
          label={t('profile.insights')}
          onPress={() => router.push('/(app)/(tabs)/(profile)/insights')}
        />

        <SettingsMenuItem
          testID="activity-button"
          label={t('activity.title')}
          onPress={() => router.push('/(app)/(tabs)/(profile)/activity')}
        />

        <SettingsMenuItem
          testID="reading-preferences-button"
...
