...
    >
      <Button
        loading={isPending}
        disabled={!form.formState.isValid}
        onPress={onSubmit}
        title={t('common.create')}
        testID="create-tag-button"
      />
    </BottomSheetFooter>
  );

  return (
    <Portal>
...
          <ControlledTextInput
            control={form.control}
            autoFocus
            name="title"
            label={t('tag.createTitle')}
            placeholder={t('tag.createPlaceholder')}
            testID="tag-title-input"
          />
        </BottomSheetView>
      </BottomSheet>
    </Portal>
  );
});
...
