...
          <ControlledTextInput
            control={form.control}
            autoFocus
            name="name"
            label={t('folder.createNameLabel')}
            placeholder={t('folder.createNamePlaceholder')}
            testID="folder-name-input"
          />
          <ControlledTextInput
            control={form.control}
            name="description"
            label={t('folder.createDescriptionLabel')}
            placeholder={t('folder.createDescriptionPlaceholder')}
            testID="folder-description-input"
          />
        </BottomSheetView>
      </BottomSheet>
    </Portal>
  );
});
...
