...
      </TagQuoteBottomSheetProvider>

      <CreateTagBottomSheet ref={createTagSheetRef} />
      <CreateFolderBottomSheet ref={createFolderSheetRef} />

      {activeTab === 'favorites' ? (
        <Fab testID="collection-fab" iconName="pricetag-outline" onPress={() => createTagSheetRef.current?.expand()} />
      ) : (
        <Fab
          testID="create-folder-fab"
          iconName="folder-outline"
          onPress={() => createFolderSheetRef.current?.expand()}
        />
      )}
    </View>
  );
...
